####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = bananna

## INCLUDES were found outside kdevelop specific part

bananna_SOURCES = stdafx.cpp PreferenceValue.cpp PreferenceStore.cpp FilePref.cpp System_Input.cpp System_Resource.cpp Disp_Manager.cpp mmgr.cpp System_API.cpp Gui_Menu.cpp Gui_Font.cpp Gui_Elt.cpp Gfx_BitBuffer.cpp Game_Manager.cpp Evn_Manager.cpp Base_ResourceParser.cpp Base_MsgBuffer.cpp Base_Logging.cpp main.cpp 
bananna_LDADD   = /usr/lib/libSDL.a /usr/lib/libSDL_image.a /usr/lib/libpng.a /usr/lib/libtiff.a /usr/lib/libjpeg.a /usr/lib/libz.a


EXTRA_DIST = main.cpp Base_Global.h Base_Logging.cpp Base_Logging.h Base_MsgBuffer.cpp Base_MsgBuffer.h Base_NamedResource.h Base_NumberedResource.h Base_ResourceMngr.h Base_ResourceParser.cpp Base_ResourceParser.h Base_Status.h Base_Time.h Evn_Manager.cpp Evn_Manager.h Game_Manager.cpp Game_Manager.h Gfx_BitBuffer.cpp Gfx_BitBuffer.h Gui_Elt.cpp Gui_Elt.h Gui_Font.cpp Gui_Font.h Gui_Menu.cpp Gui_Menu.h System_API.cpp System_API.h mmgr.cpp mmgr.h nommgr.h Disp_Manager.h Disp_Manager.cpp System_Resource.h System_Resource.cpp System_Input.h System_Input.cpp FilePref.cpp FilePref.h PreferenceStore.cpp PreferenceStore.h PreferenceValue.cpp PreferenceValue.h stdafx.cpp stdafx.h defines.h ParserTable.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
bananna_LDFLAGS = $(all_libraries) 
                                                                                
